<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/sub_item_layout"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rectangle">

        <TextView
            android:id="@+id/sub_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/density_size_8"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</layout>