...
                android:elevation="6dp"
                android:minHeight="?attr/actionBarSize"
                app:tabSelectedTextColor="@color/colorWhite"
                app:tabTextColor="@color/colorWhite" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/tab_layout"
                android:descendantFocusability="blocksDescendants" />
        </RelativeLayout>

...
